--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.pythonPath": "D:\\soft\\anaconda\\envs\\TensorFlow-GPU\\python.exe"
+    "python.pythonPath": "D:\\soft\\anaconda\\envs\\TensorFlow-GPU\\python.exe",
+    "python.linting.pylintArgs": [
+
+                //"--extension-pkg-whitelist=PyQt5",
+        
+                //"--disable-msg=import error"
+        
+        ]
 }
